# Schronu

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
apps_script/: README.md  main.js
shell/: copy_for_spreadsheet.sh  extract_rho_info.sh  generate_command_from_spreadsheet.sh
src/: application.rs  entity.rs  lib.rs
src/adapter/: gateway.rs
src/adapter/controller/: schronu.rs  show_leaf_immutable_tasks.rs  show_leaf_tasks.rs  show_leaves.rs  update_task_sample.rs
src/adapter/gateway/: free_time_manager.rs  task_repository.rs  yaml.rs
src/application/: interface.rs  show_leaf_immutable_tasks.rs  show_leaf_tasks.rs  update_task_sample.rs
src/entity/: busy_time_slot.rs  datetime.rs  task.rs
