[package]
name = "schronu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
walkdir = "2.3.3"
yaml-rust = "0.4.5"

[[bin]]
name = "schronu"
path = "src/adapter/controller/schronu.rs"

[[bin]]
name = "show_leaf_tasks"
path = "src/adapter/controller/show_leaf_tasks.rs"
