[package]
name = "schronu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dendron = "0.1.5"
linked-hash-map = "0.5.6"
regex = "1.8.1"
termion = "2.0.1"
unicode-width = "0.1.10"
uuid = { version = "1.3.2", features = ["v4"] }
walkdir = "2.3.3"
yaml-rust = "0.4.5"

[[bin]]
name = "schronu"
path = "src/adapter/controller/schronu.rs"

[[bin]]
name = "show_leaf_immutable_tasks"
path = "src/adapter/controller/show_leaf_immutable_tasks.rs"

[[bin]]
name = "show_leaf_tasks"
path = "src/adapter/controller/show_leaf_tasks.rs"
